tests/baselines/reference/parserErrantAccessibilityModifierInModule1.errors.txt
parserErrantAccessibilityModifierInModule1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserErrantAccessibilityModifierInModule1.ts(3,5): error TS1128: Declaration or statement expected.
parserErrantAccessibilityModifierInModule1.ts(3,13): error TS2304: Cannot find name 'y'.
parserErrantAccessibilityModifierInModule1.ts(4,18): error TS2304: Cannot find name 'y'.


==== parserErrantAccessibilityModifierInModule1.ts (4 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var x=10;  // variable local to this module body
        private y=x;  // property visible only in module
        ~~~~~~~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS2304: Cannot find name 'y'.
        export var z=y;  // property visible to any code
                     ~
!!! error TS2304: Cannot find name 'y'.
    }